--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
+    "react-icons": "^4.9.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
