--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://kind-cyan-sea-urchin-robe.cyclic.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
