--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "client",
-  "proxy": "https://kind-cyan-sea-urchin-robe.cyclic.app",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -40,7 +40,11 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 2 Edge versions",
+      "last 2 iOS versions",
+      "last 2 Android versions",
+      "last 2 Opera versions"
     ]
   }
 }
