--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.3",
     "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
