--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
     "braintree-web-drop-in-react": "^1.2.1",
+    "dotenv": "^16.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
