--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.81.0",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
